# ChangeLog for x11-libs/gtk+
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.546 2011/10/30 15:48:26 armin76 Exp $

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> gtk+-2.24.5-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #385699

  28 Oct 2011; Markus Meier <maekke@gentoo.org> gtk+-2.24.5-r1.ebuild:
  arm stable, bug #385699

  28 Oct 2011; Markus Meier <maekke@gentoo.org> gtk+-3.0.12-r1.ebuild:
  arm stable, bug #385699

  28 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> gtk+-3.2.1.ebuild:
  Restore keywords after IRC discussion with other members of gnome team
  (bug #387959). Minor stylistic issues pointed out by Nirbheek.

  25 Oct 2011; Jeroen Roovers <jer@gentoo.org> gtk+-3.2.1.ebuild:
  Marked ~hppa (bug #387959).

  21 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> gtk+-3.2.1.ebuild:
  Do not call gnome2_src_prepare, gtk+ is not using gnome.eclass. Thanks to
  ssuominen for noticing.

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gtk+-2.24.5-r1.ebuild,
  gtk+-3.0.12-r1.ebuild:
  x86 stable wrt bug #385699

  21 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> gtk+-3.2.1.ebuild:
  Drop keywords for USE="colord packagekit" (bug #387959).

*gtk+-3.2.1 (19 Oct 2011)

  19 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> +gtk+-3.2.1.ebuild,
  +files/gtk+-3.2.1-failing-tests.patch, +files/gtk+-3.2.1-selector.errors,
  metadata.xml:
  Add gtk+-3.2.1 from the gnome overlay. Disable failing treeview scrolling
  tests (see bug #384855 and https://bugzilla.gnome.org/show_bug.cgi?id=660931),
  add missing selectors.errors file (needed for the css parser test),
  completely skip reftests (many of them fail when building from portage, but
  strangely enough succeed when building from my home directory; need to
  investigate why), and disable a11y picker test (GtkFileChooserButton look
  depends on list of mounted filesystems).