@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.546 2011/10/30 15:48:26 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.547 2011/10/30 15:50:41 armin76 Exp $
+
+  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> gtk+-3.0.12-r1.ebuild:
+  alpha/ia64/sh/sparc stable wrt #385699
 
   30 Oct 2011; Raúl Porcel <armin76@gentoo.org> gtk+-2.24.5-r1.ebuild:
   alpha/ia64/sh/sparc stable wrt #385699
